[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/store_house/store_house.tscn" type="PackedScene" id=1]
[ext_resource path="res://valuables/plants/plant_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/scythe/scythe.tscn" type="PackedScene" id=3]
[ext_resource path="res://tilemap/nature/nature_tilemap.tscn" type="PackedScene" id=4]
[ext_resource path="res://tilemap/room/room_tilemap.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/TinyRanch_Crops.png" type="Texture" id=6]
[ext_resource path="res://world/world.gd" type="Script" id=7]
[ext_resource path="res://shop/shop_UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://valuables/plants/plant_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://valuables/plants/plant_3.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/enemies_spawner/enemies_spawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://menus/menus.tscn" type="PackedScene" id=12]

[node name="world" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
seed_1_scene = ExtResource( 2 )
seed_2_scene = ExtResource( 9 )
seed_3_scene = ExtResource( 10 )

[node name="control" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 600.0

[node name="colorrect" type="ColorRect" parent="control"]
margin_top = 152.0
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.521569, 0.294118, 0.247059, 1 )

[node name="colorrect2" type="ColorRect" parent="control"]
margin_right = 800.0
margin_bottom = 152.0
color = Color( 0.733333, 0.960784, 1, 1 )

[node name="grid_container" type="Node2D" parent="control"]
position = Vector2( 128, 24 )

[node name="seed_1" type="Sprite" parent="control/grid_container"]
position = Vector2( -80, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 48, 8, 8, 16 )

[node name="seed_2" type="Sprite" parent="control/grid_container"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 48, 24, 8, 16 )

[node name="seed_3" type="Sprite" parent="control/grid_container"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 88, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 48, 80, 8, 16 )

[node name="seed_reference_rect" type="ReferenceRect" parent="control/grid_container"]
margin_right = 24.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 12, 20 )
border_color = Color( 0, 0, 0, 1 )
border_width = 3.0
editor_only = false

[node name="money_label" type="Label" parent="control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Money: 0"
align = 1
valign = 1

[node name="hp_label" type="Label" parent="control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP: 0"
align = 1
valign = 1

[node name="tilemaps" type="Node2D" parent="."]

[node name="nature_tilemap" parent="tilemaps" instance=ExtResource( 4 )]
show_collision = false
tile_data = PoolIntArray( 65537, 19, 0, 65542, 21, 0, 65552, 20, 0, 65558, 19, 0, 262144, 23, 0, 262145, 23, 0, 262146, 23, 0, 262147, 23, 0, 262148, 23, 0, 262149, 23, 0, 262150, 23, 0, 262151, 23, 0, 262152, 23, 0, 262153, 23, 0, 262154, 23, 0, 262155, 23, 0, 262156, 23, 0, 262157, 23, 0, 262158, 23, 0, 262159, 23, 0, 262160, 23, 0, 262161, 23, 0, 262162, 23, 0, 262163, 23, 0, 262164, 23, 0, 262165, 23, 0, 262166, 23, 0, 262167, 23, 0, 262168, 23, 0 )

[node name="background_room_tilemap" parent="tilemaps" instance=ExtResource( 5 )]
tile_data = PoolIntArray( 327680, 536870934, 0, 327681, 536870934, 0, 327682, 536870934, 0, 327683, 536870934, 0, 327684, 536870934, 0, 327685, 536870934, 0, 327686, 536870934, 0, 327687, 536870934, 0, 327688, 536870934, 0, 327689, 536870934, 0, 327690, 536870934, 0, 327691, 536870934, 0, 327692, 536870934, 0, 327693, 536870934, 0, 327694, 536870934, 0, 327695, 536870934, 0, 327696, 536870934, 0, 327697, 536870934, 0, 327698, 536870934, 0, 327699, 536870934, 0, 327700, 536870934, 0, 327701, 536870934, 0, 327702, 536870934, 0, 327703, 536870934, 0, 327704, 536870934, 0, 393216, 536870934, 0, 393217, 536870934, 0, 393218, 536870934, 0, 393219, 536870934, 0, 393220, 536870934, 0, 393221, 536870934, 0, 393222, 536870934, 0, 393223, 536870934, 0, 393224, 536870934, 0, 393225, 536870934, 0, 393226, 536870934, 0, 393227, 536870934, 0, 393228, 536870934, 0, 393229, 536870934, 0, 393230, 536870934, 0, 393231, 536870934, 0, 393232, 536870934, 0, 393233, 536870934, 0, 393234, 536870934, 0, 393235, 536870934, 0, 393236, 536870934, 0, 393237, 536870934, 0, 393238, 536870934, 0, 393239, 536870934, 0, 393240, 536870934, 0, 458752, 536870934, 0, 458753, 536870934, 0, 458754, 536870934, 0, 458755, 536870934, 0, 458756, 536870934, 0, 458757, 536870934, 0, 458758, 536870934, 0, 458759, 536870934, 0, 458760, 536870934, 0, 458761, 536870934, 0, 458762, 536870934, 0, 458763, 536870934, 0, 458764, 536870934, 0, 458765, 536870934, 0, 458766, 536870934, 0, 458767, 536870934, 0, 458768, 536870934, 0, 458769, 536870934, 0, 458770, 536870934, 0, 458771, 536870934, 0, 458772, 536870934, 0, 458773, 536870934, 0, 458774, 536870934, 0, 458775, 536870934, 0, 458776, 536870934, 0, 524288, 536870934, 0, 524289, 536870934, 0, 524290, 536870934, 0, 524291, 536870934, 0, 524292, 536870934, 0, 524293, 536870934, 0, 524294, 536870934, 0, 524295, 536870934, 0, 524296, 536870934, 0, 524297, 536870934, 0, 524298, 536870934, 0, 524299, 536870934, 0, 524300, 536870934, 0, 524301, 536870934, 0, 524302, 536870934, 0, 524303, 536870934, 0, 524304, 536870934, 0, 524305, 536870934, 0, 524306, 536870934, 0, 524307, 536870934, 0, 524308, 536870934, 0, 524309, 536870934, 0, 524310, 536870934, 0, 524311, 536870934, 0, 524312, 536870934, 0, 589824, 536870934, 0, 589825, 536870934, 0, 589826, 536870934, 0, 589827, 536870934, 0, 589828, 536870934, 0, 589829, 536870934, 0, 589830, 536870934, 0, 589831, 536870934, 0, 589832, 536870934, 0, 589833, 536870934, 0, 589834, 536870934, 0, 589835, 536870934, 0, 589836, 536870934, 0, 589837, 536870934, 0, 589838, 536870934, 0, 589839, 536870934, 0, 589840, 536870934, 0, 589841, 536870934, 0, 589842, 536870934, 0, 589843, 536870934, 0, 589844, 536870934, 0, 589845, 536870934, 0, 589846, 536870934, 0, 589847, 536870934, 0, 589848, 536870934, 0, 655360, 536870934, 0, 655361, 536870934, 0, 655362, 536870934, 0, 655363, 536870934, 0, 655364, 536870934, 0, 655365, 536870934, 0, 655366, 536870934, 0, 655367, 536870934, 0, 655368, 536870934, 0, 655369, 536870934, 0, 655370, 536870934, 0, 655371, 536870934, 0, 655372, 536870934, 0, 655373, 536870934, 0, 655374, 536870934, 0, 655375, 536870934, 0, 655376, 536870934, 0, 655377, 536870934, 0, 655378, 536870934, 0, 655379, 536870934, 0, 655380, 536870934, 0, 655381, 536870934, 0, 655382, 536870934, 0, 655383, 536870934, 0, 655384, 536870934, 0, 720896, 536870934, 0, 720897, 536870934, 0, 720898, 536870934, 0, 720899, 536870934, 0, 720900, 536870934, 0, 720901, 536870934, 0, 720902, 536870934, 0, 720903, 536870934, 0, 720904, 536870934, 0, 720905, 536870934, 0, 720906, 536870934, 0, 720907, 536870934, 0, 720908, 536870934, 0, 720909, 536870934, 0, 720910, 536870934, 0, 720911, 536870934, 0, 720912, 536870934, 0, 720913, 536870934, 0, 720914, 536870934, 0, 720915, 536870934, 0, 720916, 536870934, 0, 720917, 536870934, 0, 720918, 536870934, 0, 720919, 536870934, 0, 720920, 536870934, 0, 786432, 536870934, 0, 786433, 536870934, 0, 786434, 536870934, 0, 786435, 536870934, 0, 786436, 536870934, 0, 786437, 536870934, 0, 786438, 536870934, 0, 786439, 536870934, 0, 786440, 536870934, 0, 786441, 536870934, 0, 786442, 536870934, 0, 786443, 536870934, 0, 786444, 536870934, 0, 786445, 536870934, 0, 786446, 536870934, 0, 786447, 536870934, 0, 786448, 536870934, 0, 786449, 536870934, 0, 786450, 536870934, 0, 786451, 536870934, 0, 786452, 536870934, 0, 786453, 536870934, 0, 786454, 536870934, 0, 786455, 536870934, 0, 786456, 536870934, 0, 851968, 536870934, 0, 851969, 536870934, 0, 851970, 536870934, 0, 851971, 536870934, 0, 851972, 536870934, 0, 851973, 536870934, 0, 851974, 536870934, 0, 851975, 536870934, 0, 851976, 536870934, 0, 851977, 536870934, 0, 851978, 536870934, 0, 851979, 536870934, 0, 851980, 536870934, 0, 851981, 536870934, 0, 851982, 536870934, 0, 851983, 536870934, 0, 851984, 536870934, 0, 851985, 536870934, 0, 851986, 536870934, 0, 851987, 536870934, 0, 851988, 536870934, 0, 851989, 536870934, 0, 851990, 536870934, 0, 851991, 536870934, 0, 851992, 536870934, 0, 917504, 536870934, 0, 917505, 536870934, 0, 917506, 536870934, 0, 917507, 536870934, 0, 917508, 536870934, 0, 917509, 536870934, 0, 917510, 536870934, 0, 917511, 536870934, 0, 917512, 536870934, 0, 917513, 536870934, 0, 917514, 536870934, 0, 917515, 536870934, 0, 917516, 536870934, 0, 917517, 536870934, 0, 917518, 536870934, 0, 917519, 536870934, 0, 917520, 536870934, 0, 917521, 536870934, 0, 917522, 536870934, 0, 917523, 536870934, 0, 917524, 536870934, 0, 917525, 536870934, 0, 917526, 536870934, 0, 917527, 536870934, 0, 917528, 536870934, 0, 983040, 536870934, 0, 983041, 536870934, 0, 983042, 536870934, 0, 983043, 536870934, 0, 983044, 536870934, 0, 983045, 536870934, 0, 983046, 536870934, 0, 983047, 536870934, 0, 983048, 536870934, 0, 983049, 536870934, 0, 983050, 536870934, 0, 983051, 536870934, 0, 983052, 536870934, 0, 983053, 536870934, 0, 983054, 536870934, 0, 983055, 536870934, 0, 983056, 536870934, 0, 983057, 536870934, 0, 983058, 536870934, 0, 983059, 536870934, 0, 983060, 536870934, 0, 983061, 536870934, 0, 983062, 536870934, 0, 983063, 536870934, 0, 983064, 536870934, 0, 1048576, 536870934, 0, 1048577, 536870934, 0, 1048578, 536870934, 0, 1048579, 536870934, 0, 1048580, 536870934, 0, 1048581, 536870934, 0, 1048582, 536870934, 0, 1048583, 536870934, 0, 1048584, 536870934, 0, 1048585, 536870934, 0, 1048586, 536870934, 0, 1048587, 536870934, 0, 1048588, 536870934, 0, 1048589, 536870934, 0, 1048590, 536870934, 0, 1048591, 536870934, 0, 1048592, 536870934, 0, 1048593, 536870934, 0, 1048594, 536870934, 0, 1048595, 536870934, 0, 1048596, 536870934, 0, 1048597, 536870934, 0, 1048598, 536870934, 0, 1048599, 536870934, 0, 1048600, 536870934, 0, 1114112, 536870934, 0, 1114113, 536870934, 0, 1114114, 536870934, 0, 1114115, 536870934, 0, 1114116, 536870934, 0, 1114117, 536870934, 0, 1114118, 536870934, 0, 1114119, 536870934, 0, 1114120, 536870934, 0, 1114121, 536870934, 0, 1114122, 536870934, 0, 1114123, 536870934, 0, 1114124, 536870934, 0, 1114125, 536870934, 0, 1114126, 536870934, 0, 1114127, 536870934, 0, 1114128, 536870934, 0, 1114129, 536870934, 0, 1114130, 536870934, 0, 1114131, 536870934, 0, 1114132, 536870934, 0, 1114133, 536870934, 0, 1114134, 536870934, 0, 1114135, 536870934, 0, 1114136, 536870934, 0, 1179648, 536870934, 0, 1179649, 536870934, 0, 1179650, 536870934, 0, 1179651, 536870934, 0, 1179652, 536870934, 0, 1179653, 536870934, 0, 1179654, 536870934, 0, 1179655, 536870934, 0, 1179656, 536870934, 0, 1179657, 536870934, 0, 1179658, 536870934, 0, 1179659, 536870934, 0, 1179660, 536870934, 0, 1179661, 536870934, 0, 1179662, 536870934, 0, 1179663, 536870934, 0, 1179664, 536870934, 0, 1179665, 536870934, 0, 1179666, 536870934, 0, 1179667, 536870934, 0, 1179668, 536870934, 0, 1179669, 536870934, 0, 1179670, 536870934, 0, 1179671, 536870934, 0, 1179672, 536870934, 0 )

[node name="room_tilemap" parent="tilemaps" instance=ExtResource( 5 )]
show_collision = true
tile_data = PoolIntArray( 327685, 4, 0, 327686, 536870913, 0, 327687, 536870914, 0, 327688, 1, 0, 327689, 536870916, 0, 327690, 4, 0, 327691, 536870913, 0, 327692, 536870914, 0, 327693, 1, 0, 327694, 536870916, 0, 327695, 4, 0, 327696, 536870913, 0, 327697, 536870914, 0, 327698, 1, 0, 327699, 536870916, 0, 393221, 5, 0, 393225, 14, 0, 393226, 5, 0, 393230, 14, 0, 393231, 5, 0, 393235, 14, 0, 458757, 536870926, 0, 458758, 21, 0, 458759, 21, 0, 458760, 21, 0, 458761, 13, 0, 458762, 536870926, 0, 458763, 21, 0, 458764, 21, 0, 458765, 21, 0, 458766, 13, 0, 458767, 536870926, 0, 458768, 21, 0, 458769, 21, 0, 458770, 21, 0, 458771, 13, 0, 524293, 18, 0, 524294, 16, 0, 524295, 17, 0, 524296, 19, 0, 524297, 10, 0, 524298, 18, 0, 524299, 16, 0, 524300, 17, 0, 524301, 19, 0, 524302, 10, 0, 524303, 18, 0, 524304, 16, 0, 524305, 17, 0, 524306, 19, 0, 524307, 10, 0 )

[node name="valuables" type="Node2D" parent="." groups=["valuables"]]

[node name="rooms" type="Node2D" parent="valuables"]

[node name="plants" type="Node2D" parent="valuables"]

[node name="turrets" type="Node2D" parent="valuables"]

[node name="player" type="Node2D" parent="."]

[node name="store_house" parent="player" instance=ExtResource( 1 )]
position = Vector2( 400, 144 )

[node name="scythe" parent="player" instance=ExtResource( 3 )]
position = Vector2( 704, 24 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="shop_UI" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
margin_right = 64.0
margin_bottom = 64.0

[node name="enemies_spawner" parent="." instance=ExtResource( 11 )]
position = Vector2( 400, 624 )

[node name="menus" parent="." instance=ExtResource( 12 )]
